:lipstick: align result items correctly

--- a/src/app/taxes/components/result/result.component.scss
+++ b/src/app/taxes/components/result/result.component.scss
@@ -18,14 +18,6 @@ table {
   margin-top: 30px;
 }
 
-.no-margin {
-  margin-top: 0px;
-}
-
 .bold {
   font-weight: bold;
-}
-
-.width-77 {
-  width: 77%;
 }
